--- a/style.css
+++ b/style.css
@@ -101,20 +101,58 @@ body {
   color: #1d313c;
   /* background-color: #fadac1; */
   /* background-color: #e7dcc9; */
-  background-color: #e7ded7;
-  /* background-color: #f2f2f2; //cyber */
+  /* background-color: #e7ded7; */
+  background-color: #f2f2f2;
 }
 
-.portfolio-container {
+.portfolio {
   margin: 0 auto;
   padding: 0 20px;
   max-width: 1200px;
+  /* border: 1px solid crimson; */
 }
 
-.portfolio-wrap {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding-top: 200px;
 }
+
+.portfolio-title {
+  margin-bottom: 70px;
+  font-size: 32px;
+  font-weight: 700;
+  color: rgba(29, 49, 60, .9);
+}
+
+.portfolio-wrap {
+  width: 100%;
+  /* border: 1px solid aqua; */
+}
+
+.portfolio-header {
+  display: flex;
+  background-color: #eaeaea;
+  border-radius: 15px;
+  /* border: 1px solid #1d313c; */
+}
+
+.portfolio-header-item {
+  flex-basis: 20%;
+  padding: 20px 0 20px 40px;
+}
+
+.portfolio-header-text {
+  /* display: block; */
+  font-weight: 500;
+  /* text-align: center; */
+}
+
+.portfolio-list {
+  
+}
+
+
+/* использованая жирность шрифта: 400, 500, 700 */
