--- a/style.css
+++ b/style.css
@@ -99,17 +99,18 @@
 body {
   font-family: 'Noto Sans Mono', monospace;
   color: #1d313c;
+  /* color: #1F212E; */
   /* background-color: #fadac1; */
   /* background-color: #e7dcc9; */
   /* background-color: #e7ded7; */
-  background-color: #f2f2f2;
+  /* background-color: #f2f2f2; */
+  background-color: #fff;
 }
 
 .portfolio {
   margin: 0 auto;
   padding: 0 20px;
   max-width: 1400px;
-  /* border: 1px solid crimson; */
 }
 
 .container {
@@ -117,7 +118,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 200px;
+  padding-top: 150px;
 }
 
 .portfolio-title {
@@ -130,14 +131,12 @@ body {
 
 .portfolio-wrap {
   width: 100%;
-  /* border: 1px solid aqua; */
 }
 
 .portfolio-header {
   display: flex;
   background-color: #eaeaea;
   border-radius: 15px;
-  /* border: 1px solid #1d313c; */
 }
 
 .portfolio-header-item {
