--- a/style.css
+++ b/style.css
@@ -1,16 +1,3 @@
-/* noto-sans-mono-300 - latin */
-@font-face {
-  font-display: swap;
-  /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Noto Sans Mono';
-  font-style: normal;
-  font-weight: 300;
-  src: url('./src/fonts/noto-sans-mono-v30-latin-300.woff2') format('woff2'),
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    url('./src/fonts/noto-sans-mono-v30-latin-300.ttf') format('truetype');
-  /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-}
-
 /* noto-sans-mono-regular - latin */
 @font-face {
   font-display: swap;
@@ -37,19 +24,6 @@
   /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
-/* noto-sans-mono-600 - latin */
-@font-face {
-  font-display: swap;
-  /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Noto Sans Mono';
-  font-style: normal;
-  font-weight: 600;
-  src: url('./src/fonts/noto-sans-mono-v30-latin-600.woff2') format('woff2'),
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    url('./src/fonts/noto-sans-mono-v30-latin-600.ttf') format('truetype');
-  /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-}
-
 /* noto-sans-mono-700 - latin */
 @font-face {
   font-display: swap;
@@ -63,32 +37,6 @@
   /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
-/* noto-sans-mono-800 - latin */
-@font-face {
-  font-display: swap;
-  /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Noto Sans Mono';
-  font-style: normal;
-  font-weight: 800;
-  src: url('./src/fonts/noto-sans-mono-v30-latin-800.woff2') format('woff2'),
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    url('./src/fonts/noto-sans-mono-v30-latin-800.ttf') format('truetype');
-  /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-}
-
-/* noto-sans-mono-900 - latin */
-@font-face {
-  font-display: swap;
-  /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Noto Sans Mono';
-  font-style: normal;
-  font-weight: 900;
-  src: url('./src/fonts/noto-sans-mono-v30-latin-900.woff2') format('woff2'),
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    url('./src/fonts/noto-sans-mono-v30-latin-900.ttf') format('truetype');
-  /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -99,10 +47,6 @@
 body {
   font-family: 'Noto Sans Mono', monospace;
   color: #1d313c;
-  /* background-color: #fadac1; */
-  /* background-color: #e7dcc9; */
-  /* background-color: #e7ded7; */
-  /* background-color: #f2f2f2; */
   background-color: #fff;
 }
 
@@ -144,14 +88,15 @@ body {
 }
 
 .portfolio-header-text {
-  /* display: block; */
-  font-weight: 600;
-  /* text-align: center; */
+  display: block;
+  font-weight: 700;
 }
 
 .portfolio-list {
   margin-bottom: 100px;
   font-size: 14px;
+  font-weight: 500;
+  color: rgba(29, 49, 60, .8);
   list-style: none;
 }
 
@@ -161,10 +106,7 @@ body {
 
 .portfolio-list-item:nth-child(1n) {
   border-bottom: 1px solid rgba(29, 49, 60, .1);
-  /* border-bottom: 1px solid #eaeaea; */
-
 }
-
 
 .portfolio-company-field,
 .portfolio-ticker-field,
@@ -174,23 +116,5 @@ body {
   flex-basis: 20%;
   padding: 15px 20px 15px 50px;
 }
-
-
-.percent-change-green {
-  color: #50a3ab;
-}
-
-.percent-change-red {
-  
-}
-
-/* .portfolio-company-field-text,
-.portfolio-ticker-field-text,
-.portfolio-exchange-field-text,
-.portfolio-price-field-text,
-.portfolio-percent-field-text {
-  font-size: 14px;
-} */
-
 
 /* использованая жирность шрифта: 400, 500, 700 */
